--- a/_config.yml
+++ b/_config.yml
@@ -27,7 +27,7 @@ description: >- # this means to ignore newlines until "baseurl:"
   Our mission is to improve the environmental performance and energy
   efficiency of road, marine, and air transportation, in order to benefit
   public health and mitigate climate change.
-baseurl: "roadmap-doc" # the subpath of your site, e.g. /blog
+baseurl: "/roadmap-doc" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: theicct
 github_username:  theicct
